src/core-crm/objects/MDM_Callout_Event__e/MDM_Callout_Event__e.object-meta.xml
<CustomObject>
    <label>MDM Callout Event</label>
    <pluralLabel>MDM Callouts Event</pluralLabel>
</CustomObject>