src/core-crm/objects/MDM_Callout_Event__e/fields/Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id__c</fullName>
    <description>This field is a string containing Contact Id.</description>
    <label>Contact Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>