src/core-crm/objects/MDM_Callout_Event__e/fields/Course_Connection_Id__c.field-meta.xml
<CustomField>
    <fullName>Course_Connection_Id__c</fullName>
    <description>This field is a string containing Course Connection Id.</description>
    <label>Course Connection Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>