src/core-crm/objects/MDM_Callout_Event__e/fields/Triggering_Record__c.field-meta.xml
<CustomField>
    <fullName>Triggering_Record__c</fullName>
    <description>This field identifies the specific record that initiated the platform event.</description>
    <label>Triggering Record</label>
    <length>80</length>
    <type>Text</type>
</CustomField>